# web_sanitization

./: Makefile  README.md  pyproject.toml
test/: test_validator.py
validator/: __init__.py  main.py
